--- a/code/conor/html/lab_1/lab_1.html
+++ b/code/conor/html/lab_1/lab_1.html
@@ -20,8 +20,10 @@
       into the World Golf Hall of Fame in 1974.</p>
   </body>
     <h2>Places Hogan Lived</h2>
-    <p>Stephenville, Texas (birthplace)</p>
-    <p>Fort Worth, Texas (deathplace)</p>
+      <ul>
+        <li>Stephenville, Texas (birthplace)</li>
+        <li>Fort Worth, Texas (deathplace)</li>
+      </ul>
   </body>
     <h3>Wikipedia Link</h3>
     <a href="https://en.wikipedia.org/wiki/Ben_Hogan">Click Here for More!</a>
