--- a/code/charlie/HTML/Lab1.html
+++ b/code/charlie/HTML/Lab1.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
     <h1>
-        <title><b>The Biogaphy of Stevie Ray Vaughan</b></title>
+        <title>"The Biogaphy of Stevie Ray Vaughan"</title>
+        A Brief look into the life of Stevie Ray Vaughan
     </h1> 
     <h2>
-        Introduction
+
+        Introduction:
+            <p>
+                Stevie Ray Vaughan was and is one of the premier blues guitarist of the Texas Blues style to this day. 
+                Even after his passing over 30 years ago professional and amateurs alike still try to emulate
+                his incendiary style. 
+            </p>
     </h2>
     <body>
         <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Stevie_Ray_Vaughan%2C_1989.jpg/220px-Stevie_Ray_Vaughan%2C_1989.jpg", alt="Stevie Ray Vaughan playing on Austin City Limits in 1989"/>
         <p> 
-            <q>I use heavy strings, tune low, play hard, and floor it. Floor it. That's technical talk.</q>
+            Has Lived:
+                <p>
+                    <i>Austin, Texas</i>
+                    <i>Wisconsin</i>
+                    <i>East Troy, Texas</i>
+                    <i>Dallas, Texas</i>
+                </p>
+            <br><q>I use heavy strings, tune low, play hard, and floor it. Floor it. That's technical talk.</q>
                 --Stevie Ray Vaughan
 
             <br>If you would like to know more please click the link below
