--- a/code/charlie/HTML/Lab1.html
+++ b/code/charlie/HTML/Lab1.html
@@ -18,10 +18,10 @@
         <p> 
             Has Lived:
                 <p>
-                    <i>Austin, Texas</i>
-                    <i>Wisconsin</i>
-                    <i>East Troy, Texas</i>
-                    <i>Dallas, Texas</i>
+                    <br><i>Austin, Texas</i>
+                    <br><i>Wisconsin</i>
+                    <br><i>East Troy, Texas</i>
+                    <br><i>Dallas, Texas</i>
                 </p>
             <br><q>I use heavy strings, tune low, play hard, and floor it. Floor it. That's technical talk.</q>
                 --Stevie Ray Vaughan
