--- a/code/conor/html/lab_1/lab_1.html
+++ b/code/conor/html/lab_1/lab_1.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><link rel="stylesheet" type="text/css" href="bio_style.css"></head>
     <title>Famous Bio</title>
+    <meta name="author" content="Conor Dondale">
   </head>
     <h1>Ben Hogan</h1>
-    <img src="benhogan.jfif" alt="Ben Hogan" width="300" height="400"> 
+    <img class="hogan" src="benhogan.jfif" alt="Ben Hogan"> 
   <body>
-    <p>Generally speaking, Ben Hogan is considered to be one of the Greatest Golfers of all time.
-      His contributions to the game have lasted the test of time from his unique playing style to
-      the invasive "Swing Secret" that took him years to reveal. He is one of only 5 players to have
-      want all 4 Major Championships which will likely remain to be a small number as the years go
-      along. Hogan was known to practice more than anybody else in that time period, giving him
-      the unofficial credit of "inventing" practice. Racking up 63 PGA Tour victories, Hogan also
-      authored a book called "Five Lessons: The Modern Fundamentals of Golf" which has been the most 
-      read title on the subject since it was published. A car accident in 1949 left him brutally
-      injured and doctors told him he many never walk again. Despite the serious setback, Hogan
-      slowly made his way back to competition, thus the PGA Tour created an award in his name for
-      players that have perservered through their careers with injury or illness. Hogan was inducted
-      into the World Golf Hall of Fame in 1974.</p>
-  </body>
-  <body>
-    <h3>Famous Quotes</h3>
-    <ul>
-      <li>"The only thing a golfer needs is more daylight."</li>
-    </ul>
-  </body>
-    <h3>Places Hogan Lived</h2>
+    <p>Generally speaking, Ben Hogan is considered to be one of the Greatest Golfers of all time. His contributions to the game have lasted the test of time from his unique playing style to the invasive "Swing Secret" that took him years to reveal. He is one of only 5 players to have want all 4 Major Championships which will likely remain to be a small number as the years go along. Hogan was known to practice more than anybody else in that time period, giving him the unofficial credit of "inventing" practice. Racking up 63 PGA Tour victories, Hogan also authored a book called "Five Lessons: The Modern Fundamentals of Golf" which has been the most read title on the subject since it was published. A car accident in 1949 left him brutally injured and doctors told him he many never walk again. Despite the serious setback, Hogan slowly made his way back to competition, thus the PGA Tour created an award in his name for players that have perservered through their careers with injury or illness. Hogan was inducted into the World Golf Hall of Fame in 1974 and died at his home in Forth Worth, Texas in 1997
+    </p>
+    <h2>Famous Quotes</h2>
+      <ul>
+        <div style="font-style:italic">
+        <li>"The only thing a golfer needs is more daylight."</li>
+        </div>
+      </ul>
+    <h2>Places Hogan Lived</h2>
       <ul>
         <li>Stephenville, Texas (birthplace)</li>
         <li>Fort Worth, Texas (deathplace)</li>
       </ul>
-  </body>
-    <h3>Wikipedia Link</h3>
     <a href="https://en.wikipedia.org/wiki/Ben_Hogan">Click Here for More!</a>
+    <img class="ancc" src="ANCC12.jfif" alt="ANCC Hole 12">
+  </body>
 </html>
