--- a/code/charlie/HTML/CSS/Lab1/Lab1.html
+++ b/code/charlie/HTML/CSS/Lab1/Lab1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <h1>
-        <title>"The Biogaphy of Stevie Ray Vaughan"</title>
+        <title>"The Biography of Stevie Ray Vaughan"</title>
         A Brief look into the life of Stevie Ray Vaughan
     </h1> 
     <h2>
@@ -16,19 +16,19 @@
     <body>
         <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Stevie_Ray_Vaughan%2C_1989.jpg/220px-Stevie_Ray_Vaughan%2C_1989.jpg", alt="Stevie Ray Vaughan playing on Austin City Limits in 1989"/>
         <p> 
-            Has Lived:
+            Has lived in:
                 <p>
-                    <br><i>Austin, Texas</i>
+                    <i>Austin, Texas</i>
                     <br><i>Wisconsin</i>
                     <br><i>East Troy, Texas</i>
                     <br><i>Dallas, Texas</i>
                 </p>
             <br><q>I use heavy strings, tune low, play hard, and floor it. Floor it. That's technical talk.</q>
-                --Stevie Ray Vaughan
+                <br>~-Stevie Ray Vaughan-~<br>
 
             <br>If you would like to know more please click the link below
+            <br><a href="https://en.wikipedia.org/wiki/Stevie_Ray_Vaughan"> SRV-Wikipedia</a>
         </p>
-        <a href="https://en.wikipedia.org/wiki/Stevie_Ray_Vaughan"> SRV-Wikipedia</a>
 
     </body>
 
