html blog page - getting started

--- a/code/richard/html/2_blog_page_template/blog.html
+++ b/code/richard/html/2_blog_page_template/blog.html
@@ -1,12 +1,24 @@
+<!DOCTYPE html>
 <html>
     <head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Cities</title>
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <header></header>
-        <main></main>
-        <footer></footer>
+        <header>
+
+        </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+            <p>Copyright 2021</p>
+        </footer>
         
 
     </body>
