html css blog template organize

--- a/code/richard/html/2_blog_page_template/blog_template/blog.html
+++ b/code/richard/html/2_blog_page_template/blog_template/blog.html
@@ -2,17 +2,19 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Cities</title>
+        <title>Richard's Blog</title>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <header>
+            <h1>Richards Blog</h1>
 
         </header>
 
         <main>
+            <p>Richard's Main</p>
 
         </main>
 
