--- a/code/charlie/HTML/Lab2/Lab2.html
+++ b/code/charlie/HTML/Lab2/Lab2.html
@@ -20,9 +20,10 @@
 
             <div class="flex-gallery">
                 <div>
-                    <img src="https://www.hackerone.com/themes/hackerone/images/community.jpg" 
-                    <a href="https://www.hackerone.com/">Click Here</a>
-                    Hacking is here for good — for the good of all of us.
+                    <h2>"The H*****O** Blog"</h2>
+                    <img src="https://www.hackerone.com/themes/hackerone/images/community.jpg", alt="Female technologist at Hacker convention"/> 
+                    <br><a href="https://www.hackerone.com/">Click Here for more info</a>
+                    <br>Hacking is here for good — for the good of all of us.
                     By partnering with organizations, trusted hackers become 
                     an extension of your security team to protect against data breaches,
                     reduce cybercrime, protect privacy, and restore trust in our digital society.
