--- a/code/charlie/HTML/Lab2/Lab2.html
+++ b/code/charlie/HTML/Lab2/Lab2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="main.css">
+        <title>The Blog Space of the Unknownnnn!!!</title>
+        <link rel="stylesheet" href="Lab2.css">
     </head>
 <body>
     <header>
