--- a/code/mike/HTML/lab2/lab_2_part2.html
+++ b/code/mike/HTML/lab2/lab_2_part2.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <link rel="stylesheet" href="main.css">
+        <title>Barney's Corner</title>
+    </head>
     <body>
         <aside>
             <div>
@@ -9,13 +15,29 @@
                 <h1>Barney's Corner</h1>
                 <p>A Happy Family Blog</p>
                 <nav>
-                    <ul>
+                    <ul class=list>
                     <li><a href="#">Home</a></li>
                     <li><a href="=">About</a></li>
                     <li><a href="#">Archives</a></li>
                     <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
+                <ul class=social>
+                    <li>
+                        <a href="https://www.facebook.com/Barney/">
+                            <img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Facebook_colored_svg_copy-512.png" alt="Facebook" target="_blank">
+                        </a>
+                        <a href="https://twitter.com/barney_dinosaur">
+                            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter" target="_blank">
+                        </a>
+                        <a href="https://www.instagram.com/role_play_barney_the_dinosaur/">
+                            <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png" alt="Instagram" target="_blank">
+                        </a>
+                        <a href="https://www.youtube.com/user/HITBarney">
+                            <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_youtube-512.png" alt="YouTube" target="_blank">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </aside>
         <main>
