--- a/code/charlie/HTML/Lab2/Lab2.html
+++ b/code/charlie/HTML/Lab2/Lab2.html
@@ -21,16 +21,44 @@
 
             <div class="flex-gallery">
                 <div>
-                    <h2>"The H*****O** Blog"</h2>
+                    <h2>"The Hackey-Clicky Blog"</h2>
                     <img src="https://www.hackerone.com/themes/hackerone/images/community.jpg", alt="Female technologist at Hacker convention"/> 
                     <br><a href="https://www.hackerone.com/">Click Here for more info</a>
-                    <br>Hacking is here for good — for the good of all of us.
+                    <p>
+                        Hacking is here for good — for the good of all of us.
                     By partnering with organizations, trusted hackers become 
                     an extension of your security team to protect against data breaches,
                     reduce cybercrime, protect privacy, and restore trust in our digital society.
+                    </p>
+                </div>
+                
+                <div>
+                    <h3>"All the Wild Things!</h3>
+                    <img src="", alt=""/>
+                    <br><a href="">Random link</a>
+                    <p>
+                        Maecenas sem tellus, fringilla nec rutrum consequat, imperdiet et massa. 
+                    In elementum vulputate magna eu ultricies. Nullam vestibulum massa sed efficitur interdum.
+                    Nullam aliquam vulputate tortor, a dictum ligula lobortis quis. 
+                    Maecenas quis augue condimentum, dictum dui quis, rutrum lectus. 
+                    Nulla cursus vitae leo sit amet convallis. 
+                    Fusce ullamcorper arcu eu nunc tristique, et blandit ligula vehicula. 
+                    Nulla tristique sem odio, quis sodales purus lacinia at.
+                    </p>
                 </div>
 
                 <div>
+                    <h4>"Locked In"</h4>
+                    <img src="https://images.genius.com/8f4b68670c031a5624c173a3527c31b7.1000x1000x1.png", alt="Jack Harlow, What's Popping"/>
+                    <br><a href="">Random link</a>
+                    <p>
+                        Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis.
+                        Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis
+                        soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated
+                        corpse, cricket bat max brucks terribilem incessu zomby. The voodoo sacerdos flesh eater, suscitat mortuos comedere
+                        carnem virus. Zonbi tattered for solum oculi eorum defunctis go lum cerebro. Nescio brains an Undead zombies. Sicut
+                        malus putrid voodoo horror. Nigh tofth eliv ingdead.
+                    </p>
 
                 </div>
             </div>
