--- a/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
+++ b/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
@@ -15,28 +15,38 @@
                 <h1>A Blog Name</h1>
                 <h3>A Brief Blog Bio</h3>
             </div>
-            <nav>
+            <hr id="hr1">
+            <nav id="nav1">
                 <p><a href="#">Home</a></p>
                 <p><a href="#">About</a></p>
                 <p><a href="#">More</a></p>
                 <p><a href="#">Contact</a></p>
-            </nav>
+            </nav id="nav1">
+            <hr id="hr2">
         </header>
         <main>
             <section>
-
+                <h2>Cold-Pressed</h2>
+                <p>Cold-pressed listicle church-key kogi, cred neutra jean shorts umami raclette waistcoat yuccie plaid bicycle rights occupy. Skateboard tattooed brooklyn venmo master cleanse slow-carb kombucha. Typewriter mustache snackwave shabby chic franzen craft beer biodiesel iceland. Messenger bag umami tousled retro.</p>
+                <hr id="hr3">
+                <h2>Tumeric Everyday</h2>
+                <p>Tumeric everyday carry locavore irony. XOXO vaporware neutra gluten-free vexillologist, pitchfork gentrify tousled shoreditch. Next level shaman mustache tbh air plant meditation banh mi skateboard. Before they sold out flexitarian celiac actually keffiyeh fanny pack.</p>
+                <hr id="hr3">
+                <h2>Small Batch Irony</h2>
+                <p>Humblebrag small batch irony gluten-free iceland adaptogen meh you probably haven't heard of them letterpress. Celiac kickstarter food truck mlkshk forage enamel pin wayfarers narwhal. Yr fingerstache letterpress blog wolf portland salvia selvage normcore leggings bicycle rights artisan paleo subway tile typewriter. Tousled vice VHS, art party locavore blue bottle hot chicken scenester cliche iPhone farm-to-table. Hoodie gochujang cardigan taiyaki letterpress. Tilde synth gentrify affogato fanny pack VHS artisan.</p>
+                <hr id="hr3">
             </section>
             <aside>
 
             </aside>
         </main>
         <footer>
-            <nav2>
+            <nav id="nav2">
                 <p><a href="#">Home</a></p>
                 <p><a href="#">About</a></p>
                 <p><a href="#">More</a></p>
                 <p><a href="#">Contact</a></p>
-                <p>© 2021</p>
-            </nav2>
+                <p>©2021</p>
+            </nav id="nav2">
         </footer>
     </body>
