--- a/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
+++ b/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
@@ -11,18 +11,20 @@
     </head>
     <body>
         <header>
-            <div>
+            <div id="title">
                 <h1>A Blog Name</h1>
                 <h3>A Brief Blog Bio</h3>
             </div>
-            <hr id="hr1">
-            <nav id="nav1">
-                <p><a href="#">Home</a></p>
-                <p><a href="#">About</a></p>
-                <p><a href="#">More</a></p>
-                <p><a href="#">Contact</a></p>
-            </nav id="nav1">
-            <hr id="hr2">
+            <div id="nav-bar">
+                <hr id="hr1">
+                <nav id="nav1">
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">About</a></p>
+                    <p><a href="#">More</a></p>
+                    <p><a href="#">Contact</a></p>
+                </nav id="nav1">
+                <hr id="hr2">
+            </div>
         </header>
         <main>
             <section>
@@ -35,12 +37,19 @@
                 <h2>Small Batch Irony</h2>
                 <p>Humblebrag small batch irony gluten-free iceland adaptogen meh you probably haven't heard of them letterpress. Celiac kickstarter food truck mlkshk forage enamel pin wayfarers narwhal. Yr fingerstache letterpress blog wolf portland salvia selvage normcore leggings bicycle rights artisan paleo subway tile typewriter. Tousled vice VHS, art party locavore blue bottle hot chicken scenester cliche iPhone farm-to-table. Hoodie gochujang cardigan taiyaki letterpress. Tilde synth gentrify affogato fanny pack VHS artisan.</p>
                 <hr id="hr3">
+                <h2>Put A Bird On It</h2>
+                <p>Put a bird on it skateboard forage, pork belly single-origin coffee distillery venmo. Chillwave vaporware occupy austin scenester normcore glossier. Taxidermy chia cliche deep v mumblecore. Typewriter chia sriracha man braid gluten-free, hell of portland polaroid you probably haven't heard of them. Copper mug seitan 8-bit sustainable enamel pin cred.</p>
+                <hr id="hr3">
+                <h2>Four Dollar Toast</h2>
+                <p>Four dollar toast la croix enamel pin tacos adaptogen neutra art party pitchfork raclette banjo chartreuse meggings edison bulb flannel. Vaporware edison bulb occupy street art, kinfolk migas cardigan blue bottle roof party tattooed forage narwhal kickstarter. Heirloom fashion axe try-hard health goth williamsburg glossier. Kogi cloud bread ethical, paleo whatever tacos quinoa air plant live-edge four dollar toast banh mi echo park succulents. Chicharrones normcore pour-over, gastropub banh mi asymmetrical plaid occupy actually mustache tote bag unicorn scenester kinfolk biodiesel. Paleo fashion axe post-ironic, heirloom distillery tote bag gastropub gentrify you probably haven't heard of them lomo tattooed meditation echo park.</p>
+                <hr id="hr3">
             </section>
             <aside>
 
             </aside>
         </main>
         <footer>
+            <hr id="hr1">
             <nav id="nav2">
                 <p><a href="#">Home</a></p>
                 <p><a href="#">About</a></p>
@@ -48,5 +57,6 @@
                 <p><a href="#">Contact</a></p>
                 <p>©2021</p>
             </nav id="nav2">
+            <hr id="hr2">
         </footer>
     </body>
