--- a/code/merritt/jan-21-css-cities/index.html
+++ b/code/merritt/jan-21-css-cities/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Cities</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Shippori+Mincho&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header>
             <div>
-                <h1>Cites</h1>
+                <h1>Cities</h1>
                 <h3>Here is where we all are!</h3>
             </div>
             <nav>
