css - rename files

--- a/code/richard/html_css/2_blog_page_template/blog_template_2/index.html
+++ b/code/richard/html_css/2_blog_page_template/blog_template_2/index.html
@@ -1,15 +1,30 @@
 <!doctype html>
     <head>
-        <title>Example</title>
+        <title>Blog Template 2</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <header>Header</header>
+        <header>
+            Header
+        </header>
+
         <div id="main">
-        <article>Article</article>
-        <nav>Nav</nav>
-        <aside>Aside</aside>
+            <article>
+                Article
+            </article>
+        
+            <nav>
+                Nav
+            </nav>
+
+            <aside>
+                Aside
+            </aside>
+
         </div>
-        <footer>Footer</footer>
+
+        <footer>
+            Footer
+        </footer>
     </body>
