css blog template tweaks

--- a/code/richard/html_css/2_blog_page_template/blog_template_2/index.html
+++ b/code/richard/html_css/2_blog_page_template/blog_template_2/index.html
@@ -47,7 +47,7 @@
                 <h3>About Me</h3>
                 <img src="https://dummyimage.com/200x200/000/fff.png&text=Richard's+Picture" alt="Richard's Picture" class = "center">
                 <p>I like to turn data into predicdive models</p>
-                <p>I don't like design</p>
+                <p>I like math too</p>
             </aside>
 
         </div>
