--- a/code/richard/html_css/3_landing_page/final/company_x.html
+++ b/code/richard/html_css/3_landing_page/final/company_x.html
@@ -1,14 +1,47 @@
-<!doctype html>
-    <head>
-        <title>Company X</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Fake Startup</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="nav"><h3>Richard's Company</h3></div>
 
-    <body>
-        <div class="grid-container">
-            <div class="Header">Header</div>
-            <div class="Sidebar">Sidebar</div>
-            <div class="Main">Main</div>
-            <div class="Footer">Footer</div>
+      <div class="hero-img">
+        <img src="predictive_analytics.svg" alt="predictive analytics">
+      </div>
+
+      <div class="hero-text">
+        <h1>Welcome To BlockML</h1>
+        <h3>We Blockchainify Enterprise Machine Learning</h3>
+      </div>
+
+      <div class="section">
+        <div class="cards card1">
+          <h2>Enterprise</h2>
+          <button>Learn More</button>
+          <p>Charge More to Work Slower. Yes!</p>
         </div>
-    </body>
+        <div class="cards card2">
+          <h2>Scaleable</h2>
+          <button>Learn More</button>
+          <p>Its Easy when Everything Runs on AWS.</p>
+        </div>
+        <div class="cards card3">
+          <h2>Expensive</h2>
+          <button>Learn More</button>
+          <p>Blockchain. Machine Learning. Enterprise.</p>
+          <p>Of Course We are Expensive!</p>
+        </div>
+      </div>
+
+
+      <div class="footer">
+        <h3>Copyright 2021</h3>
+      </div>
+
+
+    </div>
+  </body>
+</html>
