landing page tweaks

--- a/code/richard/html_css/3_landing_page/final/company_x.html
+++ b/code/richard/html_css/3_landing_page/final/company_x.html
@@ -15,6 +15,9 @@
       <div class="hero-text">
         <h1>Welcome To BlockML</h1>
         <h3>We Blockchainify Enterprise Machine Learning</h3>
+        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. 
+          Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. 
+          Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
       </div>
 
       <div class="section">
