--- a/code/charlie/HTML/Lab1/Lab1.html
+++ b/code/charlie/HTML/Lab1/Lab1.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <h1>
+    <head>
         <title>"The Biography of Stevie Ray Vaughan"</title>
+        <link rel="stylesheet" href="Lab1.css">
+    </head>
+    <h1>
         A Brief look into the life of Stevie Ray Vaughan
     </h1> 
     <h2>
