--- a/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
+++ b/code/brndn/HTML_CSS_Labs/Lab2_Blog/blog.html
@@ -6,6 +6,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="blog.css"/>
         <title>A Blog Template</title>
     </head>
