--- a/code/merritt/jan-21-css-cities/index.html
+++ b/code/merritt/jan-21-css-cities/index.html
@@ -56,6 +56,34 @@
                     <p>Hexagon keytar fixie keffiyeh twee deep v gentrify freegan artisan chartreuse pinterest. Unicorn disrupt letterpress mustache fashion axe shoreditch wayfarers scenester literally plaid williamsburg cronut banh mi lumbersexual. Distillery activated charcoal crucifix master cleanse, mixtape you probably haven't heard of them pok pok wolf viral hell of ugh humblebrag austin. Taxidermy 3 wolf moon flannel meh leggings man bun. Narwhal flexitarian cray hashtag blog, jianbing four loko. Hammock la croix kogi single-origin coffee, hoodie +1 artisan taiyaki vegan authentic intelligentsia pop-up kale chips poutine cliche. Unicorn cold-pressed butcher kogi aesthetic.</p>
                 </div>
             </div>
+            <div>
+                <form action="https://webhook.site/a3e2e5c9-6682-48cd-94f7-ac330678f548" method="post">
+                    <h2>What is your favorite city?</h2>
+                    <div class="flex">
+                        <div>
+                            <input type="radio" name="city" id="portland" value="portland" required>
+                            <label for="portland">Portland</label><br>
+                            <input type="radio" name="city" id="veneta" value="veneta">
+                            <label for="veneta">Veneta</label><br>
+                            <input type="radio" name="city" id="stuart" value="stuart">
+                            <label for="stuart">Stuart</label><br>
+                            <input type="radio" name="city" id="bend" value="bend">
+                            <label for="bend">Bend</label><br>
+                            <input type="radio" name="city" id="beaverton" value="beaverton">
+                            <label for="beaverton">Beaverton</label><br>
+                            <input type="radio" name="city" id="fargo" value="fargo">
+                            <label for="fargo">Fargo</label>
+                        </div>
+                        <div>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required><br>
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required placeholder="Enter email here!">
+                        </div>
+                    </div>
+                    <input type="submit" value="Submit me">
+                </form>
+            </div>
         </main>
         <footer>
             <p>Copyright 2021</p>
