html form outline

--- a/code/richard/html_css/4_burrito_order_form/form.html
+++ b/code/richard/html_css/4_burrito_order_form/form.html
@@ -17,8 +17,68 @@
             </div>
 
             <div class="right-side">
-                <form>
-                    <h2>Order a Burrito</h2>
+                <h2>Order a Burrito</h2>
+                <h3>Your Burrito's Details</h3>
+                <h4>Included in your 6 bucks</h4>
+                <p>Tortilla: </p>
+                <p>Meat: </p>
+                <p>Beans</p>
+                <p>Cheese</p>
+                <p>Salsa</p>
+                <p>Sour Cream</p>
+
+
+                <form action="" method="post">
+                    <fieldset>
+                        <legend>Order Info</legend>
+                            <p>Tortilla: </p>
+                            <input type="radio" name="Tortilla" value="White"> White<br>
+                            <input type="radio" name="Tortilla" value="Wheat"> Wheat<br>
+                            <input type="radio" name="Tortilla" value="Spinach"> Spinach<br>
+                            <input type="radio" name="Tortilla" value="Corn"> Corn<br>
+
+                            <p>Rice: </p>
+                            <input type="radio" name="Rice" value="White"> White<br>
+                            <input type="radio" name="Rice" value="Brown"> Wheat<br>
+
+                            <p>Beans: </p>
+                            <input type="radio" name="Beans" value="Black"> Black<br>
+                            <input type="radio" name="Beans" value="Pinto"> Pinto<br>
+
+                            <p>Meat: </p>
+                            <input type="radio" name="Meat" value="Chicken"> Chicken<br>
+                            <input type="radio" name="Meat" value="Steak"> Steak<br>
+                            <input type="radio" name="Meat" value="Pork"> Pork<br>
+                            <input type="radio" name="Meat" value="None"> None<br>
+
+                            <br>
+
+                            <p>Additional Ingredients</p>
+                            <input type="checkbox" name="Cheese" value="Cheese"> Cheese<br>
+                            <input type="checkbox" name="Salsa" value="Salsa"> Salsa<br>
+                            <input type="checkbox" name="Sour_Cream" value="Scour_Cream"> Sour Cream<br>
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>Personal Info</legend>
+                        Username: <input type="text" name="username"/><br/>
+                        Password: <input type="text" name="password"/><br/>
+                        Name: <input type="text" name="name"/><br/>
+                        Email: <input type="text" name="email"/><br/>
+                        Phone Number: <input type="text" name="phone_number"/><br/>
+                        Date of birth: <input type="text" name="dob"/><br>
+                        Social Security Number: <input type="text" name="ssn"/><br>
+                        Street: <input type="text" name="street"/><br/>
+                        City: <input type="text" name="city"/><br/>
+                        State: <input type="text" name="state"/><br>
+                        Zip: <input type="text" name="zip"/><br>
+                    </fieldset>
+
+
+
+
+                    <p></p>
+                    <button type="submit">submit</button>
                 </form>
             </div>
 
