--- a/code/charlie/HTML/CSS/Notes/index.html
+++ b/code/charlie/HTML/CSS/Notes/index.html
@@ -20,7 +20,7 @@
 
             <div class="flex-gallery">
                 <div>
-                    <img src="https://www.hackerone.com/themes/hackerone/images/community.jpg" 
+                    <img src="https://www.hackerone.com/themes/hackerone/images/community.jpg"/> 
                     <a href=https://www.hackerone.com>Click Here</a>
                     Hacking is here for good — for the good of all of us.
                     By partnering with organizations, trusted hackers become 
@@ -32,7 +32,24 @@
 
                 </div>
             </div>
-
+            <div>
+                <form action="https://webhook.site/b44fb656-0aba-415c-8cf3-076882671669", method="post">
+                    <h1>What is your favorite Color and Car?!</h1>
+                    <input type="radio", name="Color", value="Black">Black<br>
+                    <input type="radio", name="Color", value="Green">Green<br>
+                    <input type="radio", name="Color", value="Red">Red<br>
+                    <input type="radio", name="Color", value="Blue">Blue<br>
+                    <input type="radio", name="Color", value="Gray">Gray<br> 
+                    <select name="Car">
+                        <option value="Bugatti">Bugatti</option> 
+                        <option value="Ferrari">Ferrari</option> 
+                        <option value="Lamborghini">Lamborghini</option> 
+                        <option value="Shelby">Shelby</option> 
+                        <option value="Porsche">Porsche</option> 
+                    </select>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
 
         </main>
 
