--- a/code/charlie/HTML/Lab4/Lab4.html
+++ b/code/charlie/HTML/Lab4/Lab4.html
@@ -34,7 +34,12 @@
                 <input type="radio" name="Protein" value="Shrimp"/>Shrimp<br/>
                 <input type="radio" name="Protein" value="Chicken"/>Chicken<br/>
                 <input type="radio" name="Protein" value="Sofritas"/>Sofritas<br/>
-
+            </fieldset>
+            <fieldset>
+                <legend>Extra Toppings</legend>
+                <input type="checkbox" name="extra" value="Sour Cream"/>Sour Cream<br/>
+                <input type="checkbox" name="extra" value="Pico de Gallo"/>Pico de Gallo<br/>
+                <input type="checkbox" name="extra" value="Guacamole"/>Guacamole<br/>
             </fieldset>
             <button type="submit">submit</button>
 </body>
