added responsive css lab04

--- a/code/joshua/html/lab04/index.html
+++ b/code/joshua/html/lab04/index.html
@@ -84,7 +84,7 @@ PDX Code Guild -->
                     </fieldset>
 
                     <fieldset>
-                        <legend>Personal Details:</legend>
+                        <legend>Personal Delivery Details:</legend>
                         <label for="username"> User Name:</label>
                         <input type="text" placeholder="Enter Username" id="user name" name="user name" required><br>
 
@@ -115,7 +115,7 @@ PDX Code Guild -->
                         <label for="city">City:</label>
                         <input type="text" placeholder="Enter City" id="city" name="city" required><br>
 
-                        <label for="state">State:</label>
+                        <label for="state">State:</label><br><br>
                         <select id="state" name="state" required><br>
                         <option value="Alabama">Alabama</option>
                         <option value="Alaska">Alaska</option>
