--- a/code/brndn/HTML_CSS_Labs/Lab4_Burrito/bof.html
+++ b/code/brndn/HTML_CSS_Labs/Lab4_Burrito/bof.html
@@ -14,12 +14,12 @@ Composer: brndn -->
         <header>
             <img src="https://media1.giphy.com/media/aDYXQy3W8XFG8/giphy.gif"/>
             <div id="name">
-                <h1>Bogus Burritos</h1>
+                <h1>Bogus<br/>Burritos</h1>
             </div>
         </header>
         <main>
             <div id="order">
-                <form action="" method="POST">
+                <form action="https://webhook.site/488dc11d-3536-40e6-bd1e-8cf065802dfa" method="POST">
                     <hr>
                     <h2>Custom Commission</h2>
                     <hr>
@@ -73,20 +73,21 @@ Composer: brndn -->
                     <hr>
                     <fieldset>
                         <legend>About You</legend>
-                        <input type="text" name="un" placeholder="Username">
-                        <input type="text" name="pw" placeholder="Password"><br>
-                        <input type="text" name="name" placeholder="Name">
-                        <input type="text" name="email" placeholder="Email">
-                        <input type="text" name="dob" placeholder="Birth Date"><br>
-                        <input type="text" name="ssn" placeholder="SSN">
-                        <input type="text" name="bt" placeholder="Blood Type">
-                        <input type="text" name="fb" placeholder="First-Born">
+                        <input type="text" name="un" placeholder="Username" pattern="[a-zA-Z0-9]{6,}" title="username must be at least 6 characters, letters and numbers only" required>
+                        <input type="text" name="pw" placeholder="Password" pattern="{6,}" title="password must be at least 6 characters" required><br>
+                        <input type="text" name="first" placeholder="First Name" pattern="[a-zA-Z]{3,}" title="First name must be at least 3 characters" required>
+                        <input type="text" name="last" placeholder="Last Name" pattern="[a-zA-Z]{3,}" title="Last name must be at least 3 characters" required>
+                        <input type="text" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="email must be in 'characters@characters.domain' format" required>
+                        <input type="text" name="dob" placeholder="Birth Date ##/##/####" pattern="[0-9]{2}+/[0-9]{2}+/[0-9]{4}" title="Birthdate must be in ##/##/#### format" required><br>
+                        <input type="text" name="ssn" placeholder="SSN ###-##-####" pattern="[0-9]{3}+-[0-9]{2}+-[0-9]{4}" title="SSN must be in ###-##-#### format" required>
+                        <input type="text" name="bt" placeholder="Blood Type" required>
+                        <input type="text" name="fb" placeholder="First-Born" required>
                     </fieldset>
                     <fieldset>
                         <legend>Location</legend>
-                        <input type="text" name="street" placeholder="Street">
-                        <input type="text" name="city" placeholder="City">
-                        <input type="text" name="state" placeholder="State">
+                        <input type="text" name="street" placeholder="Street" required>
+                        <input type="text" name="city" placeholder="City" required>
+                        <input type="text" name="state" placeholder="State" required>
                     </fieldset>
                     <button type="submit">Submit</button>
                 </form>
