the burrito spins

--- a/code/brndn/HTML_CSS_Labs/Lab4_Burrito/bof.html
+++ b/code/brndn/HTML_CSS_Labs/Lab4_Burrito/bof.html
@@ -18,6 +18,7 @@ Composer: brndn -->
             </div>
         </header>
         <main>
+            <img id="floater" src="https://i.giphy.com/media/xUA7bbGw5YKDpNBM2Y/giphy.webp"/>
             <div id="order">
                 <form action="https://webhook.site/488dc11d-3536-40e6-bd1e-8cf065802dfa" method="POST">
                     <hr>
