--- a/code/brndn/HTML_CSS_Labs/Lab3_Company_Home/home.html
+++ b/code/brndn/HTML_CSS_Labs/Lab3_Company_Home/home.html
@@ -16,10 +16,9 @@ Composer: brndn -->
                 <h1>Flowerfield Co.</h1>
             </div>
             <nav>
-                <p><a href="#">Home</a></p>
-                <p><a href="#">About</a></p>
-                <p><a href="#">More</a></p>
-                <p><a href="#">Contact</a></p>  
+                <p><a href="#">The Flowers</a></p>
+                <p><a href="#">The Fields</a></p>
+                <p><a href="#">The Co.</a></p>  
             </nav>
         </header>
         <main>
