Lab 4 Failed push from Friday

--- a/code/mike/HTML/lab3/index.html
+++ b/code/mike/HTML/lab3/index.html
@@ -68,16 +68,16 @@
             <footer>
                 <ul class=social>
                     <li>
-                        <a href="https://www.facebook.com/Barney/">
+                        <a href="https://www.facebook.com">
                             <img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Facebook_colored_svg_copy-512.png" alt="Facebook" target="_blank">
                         </a>
-                        <a href="https://twitter.com/barney_dinosaur">
+                        <a href="https://twitter.com">
                             <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter" target="_blank">
                         </a>
-                        <a href="https://www.instagram.com/role_play_barney_the_dinosaur/">
+                        <a href="https://www.instagram.com">
                             <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-512.png" alt="Instagram" target="_blank">
                         </a>
-                        <a href="https://www.youtube.com/user/HITBarney">
+                        <a href="https://www.youtube.com">
                             <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_youtube-512.png" alt="YouTube" target="_blank">
                         </a>
                     </li>
