javascript - first python lab redone in js

--- a/code/richard/javascript/lab_01_a/index.html
+++ b/code/richard/javascript/lab_01_a/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>...</p>
-        <script src="myscript.js"></script>
+        <script src="myscript_2.js"></script>
     </body>
 </html>
