javascript DOM - exercise 1 of 3

--- a/code/richard/javascript/lab_01_a/index.html
+++ b/code/richard/javascript/lab_01_a/index.html
@@ -4,7 +4,9 @@
         <title>Test</title>
     </head>
     <body>
-        <p>...</p>
-        <script src="myscript_2.js"></script>
+        <h1>What is the average of the following numbers? </h1>
+        <input type="text" id="number_input" value="1, 2, 3, 4, 5">
+        <h2>The Average of the <span id="count">5</span> numbers above is <span id="answer">3</span></h2>
+        <script src="myscript_1_DOM.js"></script>
     </body>
 </html>
