--- a/code/charlie/JavaScript/lab1_p1/Atm.html
+++ b/code/charlie/JavaScript/lab1_p1/Atm.html
@@ -5,7 +5,7 @@
         <title>Test</title>
     </head>
     <body>
-        <p>Clickity-Clack........Blackjack Advice!!</p>
+        <p>Clickity-Clack........ATM app.!!</p>
         <script src="Atm.js"></script>
     </body>
 </html>
