js DOM exercise - number to words

--- a/code/richard/javascript/lab_01_c/index.html
+++ b/code/richard/javascript/lab_01_c/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <title>Number to Words</title>
     </head>
     <body>
-        <p>...</p>
-        <script src="myscript.js"></script>
+        <h1>Number to Words</h1>
+        <p>Enter the Number that you want to convert below</p>
+        <input type="number" id="number_input" name="number" value="50" >
+        <br>
+        <br>
+        <input type="submit" value="Convert to Words" id="calcBtn">
+        <br>
+        <br>
+        <h3 id="word_output">Fifty</h3>
+
+        <script src="myscript_DOM.js"></script>
     </body>
 </html>
