--- a/code/brndn/JS_Labs/Lab1/index.html
+++ b/code/brndn/JS_Labs/Lab1/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Experiment One</title>
     </head>
     <body>
-        <h1>...</h1>
+        <input type="number" id="numa" placeholder="number">
+        <div id="maths">
+            <button id="plus">+</button>
+            <button id="minus">-</button>
+            <button id="times">x</button>
+            <button id="divide">/</button>
+            <button id="clear">Clear</button>
+        </div>
+        <input type="number" id="numb" placeholder="number">
+        <p id="results"></p>
         <script src="script.js"></script>
     </body>
 </html>
