--- a/code/charlie/JavaScript/lab1_p2/blackjack_index_P2.html
+++ b/code/charlie/JavaScript/lab1_p2/blackjack_index_P2.html
@@ -5,12 +5,13 @@
         <title>Blackjack Advice</title>
     </head>
     <body>
-        <title>BlackJack Advice</title>
+        <h1>Blackjack Advice</h1>
         <input type="number" id="card1" placeholder="First Card"> +
         <input type="number" id="card2" placeholder="Second Card"> +
         <input type="number" id="card3" placeholder="Third Card">
         <button id="advice">Get advice</button>
         <li id="result"></li>
+        <button id="clear">Clear</button>
         <script src="blackjack_P2.js"></script>
     </body>
 </html>
