--- a/code/richard/javascript/lab_04_todo_list/index.html
+++ b/code/richard/javascript/lab_04_todo_list/index.html
@@ -4,15 +4,33 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Richard's Todo List App in Javascript</title>
+  <meta name="description" content="Richard's Todo List App in Javascript">
+  <meta name="author" content="Richard">
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
 </head>
 
 <body>
-  <script src="app.js"></script>
+    <header>
+        <h1>Richard's Todo List App</h1>
+    </header>
+
+    <form>
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit">
+            <i class="fas fa-plus-square"></i>
+        </button>
+    </form> 
+
+    <div class="todo-container">
+        <ul class="todo-list">
+
+        </ul>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
