Tornado Awareness Week

--- a/code/conor/javascript/lab_1/atm.html
+++ b/code/conor/javascript/lab_1/atm.html
@@ -1,9 +1,31 @@
+<!-- {% comment %} Version 1 {% endcomment %}
+
+{% comment %} <!DOCTYPE html>
+<html>
+  <head>
+   <title>ATM</title> 
+  </head>
+  <body>
+    <script src="atm.js"></script>
+  </body>
+</html> {% endcomment %}
+
+{% comment %} Version 2 {% endcomment %} -->
+
 <!DOCTYPE html>
 <html>
   <head>
    <title>ATM</title> 
   </head>
   <body>
+    <h1>Welcome to the ATM</h1>
+    <h2>What would you like to do?</h2>
+      <button id="balancebutton">Show Balance</button>
+      <button id="depositButton">Deposit</button>
+      <button id="withdrawalButton">Withdrawal</button>
+      <button id="interestButton">Interest</button>
+      <button id="transactionsButton">Transaction History</button>
+      <p id="results" name="results"></p>
     <script src="atm.js"></script>
   </body>
 </html>
