--- a/code/brndn/JS_Labs/Lab3/index.html
+++ b/code/brndn/JS_Labs/Lab3/index.html
@@ -67,6 +67,10 @@
                 </div>
             </div>
         </section>
+        <form id="colors">
+            <input type="color" id="colorone"/>
+            <input type="color" id="colortwo"/>
+        </form>
         <script src="script.js"></script>
     </body>
 </html>
