We won Trivia last night

--- a/code/conor/javascript/lab_4/todo.html
+++ b/code/conor/javascript/lab_4/todo.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <title>To Do</title> 
-  </head>
-  <body>
-      <h1>Welcome to the 'To Do' list</h1>
-      
-    <script src="todo.js"></script>
-  </body>
+    <head>
+        <title>To Do</title> 
+    </head>
+    <body>
+        <h1>Welcome to the 'To Do' list</h1>
+        <h2>Feel free to add some stuff</h2>
+
+        <input id="addItem">
+        <button id="addItemBtn">Add</button>
+
+        <h3>Items needed to be completed:</h3>
+            <div id="incomplete"></div>
+
+        <h3>Completed Items:</h3>
+            <div id="complete"></div>
+    
+        <script src="todo.js"></script>
+    </body>
 </html>
