--- a/code/charlie/JavaScript/lab1_p2/atm_index_P2.html
+++ b/code/charlie/JavaScript/lab1_p2/atm_index_P2.html
@@ -20,7 +20,8 @@
         </fieldset>
         <button id="submit">Go!</button>
         </form>
-        <li id="transactions"></li>
+        <ul id="transactions"></ul>
+        <button id="clear">Clear</button>
         <script src="atm_P2.js"></script>
     </body>
 </html>
