--- a/code/richard/javascript/lab_06_clock/index.html
+++ b/code/richard/javascript/lab_06_clock/index.html
@@ -20,7 +20,7 @@
 
     <div id="main">
         <h3>Time Now:</h3>
-        <h3>16:10:44</h3>
+        <h3 class="time_area">16:10:44</h3>
     </div>
 
     <script src="app.js"></script>
