--- a/code/richard/javascript/vue/lab_11_Vue_todo/index.html
+++ b/code/richard/javascript/vue/lab_11_Vue_todo/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Hello">
   <meta name="author" content="Richard">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/site.css">
 
 </head>
 
@@ -21,6 +21,6 @@
 
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="my_js.js"></script>
+    <script src="/js/site.js"></script>
 </body>
 </html>
