--- a/code/richard/javascript/vue/lab_11_Vue_todo/index.html
+++ b/code/richard/javascript/vue/lab_11_Vue_todo/index.html
@@ -8,11 +8,12 @@
   <meta name="description" content="Hello">
   <meta name="author" content="Richard">
 
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="css/site.css">
 
 </head>
 
 <body>
+    <h1>Vue Todo List App</h1>
 
     <div id="app">
         {{ message }}
@@ -21,6 +22,6 @@
 
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="/js/site.js"></script>
+    <script src="js/site.js"></script>
 </body>
 </html>
