--- a/code/brndn/JS_Labs/Lab4/index.html
+++ b/code/brndn/JS_Labs/Lab4/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet"/>
     <link href="clock-style.css" type="text/css" rel="stylesheet"/>
-    <title>Todo</title>
+    <title>Todoucan</title>
 </head>
 <body>
     <header>
